--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,37 +1,19 @@
-
-.content{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.intro{
-  grid-column: 1/3;
-}
-
-.new_game{
-  grid-row: 2/3;
-  grid-column: 1/3;
-}
-
 .game{
-  grid-column: 1/3;
-  grid-row: 3/4;
-}
-
-.game_board{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: none;
+  grid-template-columns: repeat(3, 1fr);
+  height: 300px;
+  width: 300px;
+  border: thin solid black;
 }
-
 
 .gameCell{
-  border: thin solid black;
-  height: 50px;
-  width: 50px;
+ border: thin solid black;
 }
 
-.name_form{
+.winner{
   visibility: hidden;
 }
+.visible{
+  visibility: visible;
+} 
